--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
             <form action="#" class="volunter-form">
               <div class="form-group">
                 <input
-                  type="text"
+                  type="texts"
                   class="form-control"
                   placeholder="Your Name"
                 />
