--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light"
       id="ftco-navbar"
     >
-      <div class="container">
+      <div class="container" style="padding-top: 10px">
         <a class="navbar-brand" href="index.html">
           <img src="images/logo.png" class="logo_image" />
           AA FOUNDATION
@@ -767,13 +767,13 @@
           <div class="col-md-12 text-center">
             <p>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              Copyright &copy;
+              <!-- Copyright &copy;
               <script>
                 document.write(new Date().getFullYear());
               </script>
-              All rights reserved | This template is made with
-              <i class="icon-heart" aria-hidden="true"></i> by
-              <a href="https://colorlib.com" target="_blank">Colorlib</a>
+              All rights reserved | This template is made with -->
+              <!-- <i class="icon-heart" aria-hidden="true"></i> by
+              <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
           </div>
