did other pages

--- a/our-work.html
+++ b/our-work.html
@@ -67,13 +67,13 @@
             <li class="nav-item">
               <a href="about.html" class="nav-link">About Us</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a href="our-work.html" class="nav-link">Our Work</a>
             </li>
             <li class="nav-item">
               <a href="news.html" class="nav-link">News</a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
               <a href="contact.html" class="nav-link">Contact</a>
             </li>
           </ul>
@@ -102,84 +102,160 @@
               data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"
             >
               <span class="mr-2"><a href="index.html">Home</a></span>
-              <span>Contact</span>
+              <span>Our Work</span>
             </p>
             <h1
               class="mb-3 bread"
               data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"
             >
-              Contact Us
+              Our Work
             </h1>
           </div>
         </div>
       </div>
     </div>
 
-    <section class="ftco-section contact-section ftco-degree-bg">
+    <section class="ftco-section">
       <div class="container">
-        <div class="row d-flex mb-5 contact-info">
-          <div class="col-md-12 mb-4">
-            <h2 class="h4">Contact Information</h2>
+        <div class="row d-flex">
+          <div class="col-md-6 d-flex ftco-animate">
+            <div
+              class="img img-about align-self-stretch"
+              style="background-image: url(images/about1.jpg); width: 100%"
+            ></div>
           </div>
-          <div class="w-100"></div>
-          <div class="col-md-3">
-            <p><span>Address:</span> Ile-Ife, Osun state, Nigeria</p>
-          </div>
-          <div class="col-md-3">
+          <div class="col-md-6 pl-md-5 ftco-animate">
+            <h2 class="mb-4" style="text-align: center">
+              ANNUAL LEADERSHIP LECTURE
+            </h2>
             <p>
-              <span>Phone:</span>
-              <a href="tel://2348108745769">+234 8108745769</a>
+              The purpose of the lecture is to espouse the values of leadership
+              anchored on integrity, honesty and accountability. These are
+              values that Chief Akande has been known for in his public and
+              political career. The lecture shall focus on any aspect of
+              leadership, and should be delivered by a known Nigerian with clear
+              manifestations of the ideals of leadership.
             </p>
-          </div>
-          <div class="col-md-3">
-            <p>
-              <span>Email:</span>
-              <a href="mailto:info@yoursite.com">info@yoursite.com</a>
-            </p>
-          </div>
-          <div class="col-md-3">
-            <p><span>Website</span> <a href="#">yoursite.com</a></p>
           </div>
         </div>
-        <div class="row block-9">
-          <div class="col-md-6">
-            <h4 class="mb-4">Do you have any questions?</h4>
-            <form action="#">
-              <div class="form-group">
-                <input
-                  type="text"
-                  class="form-control"
-                  placeholder="Your Name"
-                />
+        <div class="row d-flex" style="margin-top: 100px">
+          <div class="col-md-6 pl-md-5 ftco-animate">
+            <h2 class="mb-4" style="text-align: center">
+              ANNUAL ROUND-TABLE ON FOOD SECURITY
+            </h2>
+            <p>
+              With rising food scarcity and rise in food prices in the country,
+              food security is no doubt one of the issues on the front burner of
+              our national discussion, and it will be in order for the AAF to
+              lend its voice to this, and suggest actionable programmes for
+              National and State Governments. Conclusions and recommendations
+              from the round table, in the form of policy briefs, should be
+              communicated to the relevant government ministries and agencies.
+              The round table will comprise an academic in the relevant area as
+              moderator, and 5 stakeholders as discussants.
+            </p>
+          </div>
+          <div class="col-md-6 d-flex ftco-animate">
+            <div
+              class="img img-about align-self-stretch"
+              style="background-image: url(images/about2.jpg); width: 100%"
+            ></div>
+          </div>
+        </div>
+        <div class="row d-flex" style="margin-top: 100px">
+          <div class="col-md-6 d-flex ftco-animate">
+            <div
+              class="img img-about align-self-stretch"
+              style="background-image: url(images/about3.jpg); width: 100%"
+            ></div>
+          </div>
+          <div class="col-md-6 pl-md-5 ftco-animate">
+            <h2 class="mb-4" style="text-align: center">
+              EMERGING LEADERS FELLOWSHIP
+            </h2>
+            <p>
+              The AAF's Emerging Leaders Fellowship is a prestigious,
+              non-partisan leadership training program for young Nigerians
+              between the ages of 21 and 35. Each cohort of this fellowship
+              seeks to empower high-potential Nigerians who are expected to
+              ascend to leadership roles in the public sector and other key
+              spheres over the next decade. Participants will be trained to
+              embrace the virtues of Transparency, Efficiency, and
+              Accountability (TEA), which are the cornerstones of Chief Bisi
+              Akande’s leadership legacy. The program will be administered
+              through the Adebisi Akande Leadership Institute being developed at
+              the Igbinedion University, Okada (IUO), Edo State.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section
+      style="padding-bottom: 120px; padding-top: 50px"
+      class="ftco-counter ftco-intro"
+      id="section-counter"
+    >
+      <div class="container">
+        <div class="row no-gutters">
+          <div
+            class="col-md d-flex justify-content-center counter-wrap ftco-animate"
+          >
+            <div class="block-18 color-1 align-items-stretch">
+              <div class="text text-center">
+                <h3 class="mb-4">ANNUAL LEADERSHIP LECTURE</h3>
+                <p>
+                  The lecture highlights leadership values of integrity,
+                  honesty, and accountability, exemplified by Chief Akande, and
+                  will be delivered by a distinguished Nigerian embodying these
+                  ideals.
+                </p>
+                <!-- <p>
+                  <a href="#" class="btn btn-white px-3 py-2 mt-2"
+                    >Donate Now</a
+                  >
+                </p> -->
               </div>
-              <div class="form-group">
-                <input
-                  type="text"
-                  class="form-control"
-                  placeholder="Your Email"
-                />
+            </div>
+          </div>
+          <div
+            class="col-md d-flex justify-content-center counter-wrap ftco-animate"
+          >
+            <div class="block-18 color-2 align-items-stretch">
+              <div class="text text-center">
+                <h3 class="mb-4">ANNUAL ROUND-TABLE ON FOOD SECURITY</h3>
+                <p>
+                  The AAF will address food security challenges by organizing a
+                  round table with expert stakeholders to develop policy briefs
+                  for government action.
+                </p>
+                <!-- <p>
+                  <a href="#" class="btn btn-white px-3 py-2 mt-2"
+                    >Donate Now</a
+                  >
+                </p> -->
               </div>
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Subject" />
+            </div>
+          </div>
+          <div
+            class="col-md d-flex justify-content-center counter-wrap ftco-animate"
+          >
+            <div class="block-18 color-3 align-items-stretch">
+              <div class="text text-center">
+                <h3 class="mb-4">EMERGING LEADERS FELLOWSHIP</h3>
+                <p>
+                  The AAF's Emerging Leaders Fellowship is a non-partisan
+                  program training young Nigerians (21–35) in transparency,
+                  efficiency, and accountability to prepare them for future
+                  leadership roles.
+                </p>
+                <!-- <p>
+                  <a href="#" class="btn btn-white px-3 py-2 mt-2"
+                    >Be A Volunteer</a
+                  >
+                </p> -->
               </div>
-              <div class="form-group">
-                <textarea
-                  name=""
-                  id=""
-                  cols="30"
-                  rows="7"
-                  class="form-control"
-                  placeholder="Message"
-                ></textarea>
-              </div>
-              <div class="form-group">
-                <input
-                  type="submit"
-                  value="Send Message"
-                  class="btn btn-primary py-3 px-5"
-                />
-              </div>
-            </form>
+            </div>
           </div>
         </div>
       </div>
