--- a/news.html
+++ b/news.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>ADEBISI AKANDE FOUNDATION</title>
+    <title>Welfare - Free Bootstrap 4 Template by Colorlib</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -61,7 +61,7 @@
 
         <div class="collapse navbar-collapse" id="ftco-nav">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a href="index.html" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
@@ -70,7 +70,7 @@
             <li class="nav-item">
               <a href="our-work.html" class="nav-link">Our Work</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a href="news.html" class="nav-link">News</a>
             </li>
             <li class="nav-item">
@@ -94,203 +94,26 @@
           data-scrollax-parent="true"
         >
           <div
-            class="col-md-9 ftco-animate text-center"
+            class="col-md-7 ftco-animate text-center"
             data-scrollax=" properties: { translateY: '70%' }"
           >
+            <p
+              class="breadcrumbs"
+              data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"
+            >
+              <span class="mr-2"><a href="index.html">Home</a></span>
+              <span>About</span>
+            </p>
             <h1
-              class="mb-4"
+              class="mb-3 bread"
               data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"
             >
-              THE LEADERSHIP QUESTION: PROSPECTS FOR NIGERIA
+              About Us
             </h1>
-            <!-- <p
-              class="mb-5"
-              data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"
-            >
-              Created by <a href="#">Colorlib.com</a>
-            </p> -->
-
-            <!-- <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">
-              <a
-                href="https://vimeo.com/45830194"
-                class="btn btn-white btn-outline-white px-4 py-3 popup-vimeo"
-                ><span class="icon-play mr-2"></span>Watch Video</a
-              >
-            </p> -->
           </div>
         </div>
       </div>
     </div>
-
-    <section class="ftco-counter ftco-intro" id="section-counter">
-      <div class="container">
-        <div class="row no-gutters">
-          <div
-            class="col-md d-flex justify-content-center counter-wrap ftco-animate"
-          >
-            <div class="block-18 color-1 align-items-stretch">
-              <div class="text text-center">
-                <h3 class="mb-4">ANNUAL LEADERSHIP LECTURE</h3>
-                <p>
-                  The lecture highlights leadership values of integrity,
-                  honesty, and accountability, exemplified by Chief Akande, and
-                  will be delivered by a distinguished Nigerian embodying these
-                  ideals.
-                </p>
-                <!-- <p>
-                  <a href="#" class="btn btn-white px-3 py-2 mt-2"
-                    >Donate Now</a
-                  >
-                </p> -->
-              </div>
-            </div>
-          </div>
-          <div
-            class="col-md d-flex justify-content-center counter-wrap ftco-animate"
-          >
-            <div class="block-18 color-2 align-items-stretch">
-              <div class="text text-center">
-                <h3 class="mb-4">ANNUAL ROUND-TABLE ON FOOD SECURITY</h3>
-                <p>
-                  The AAF will address food security challenges by organizing a
-                  round table with expert stakeholders to develop policy briefs
-                  for government action.
-                </p>
-                <!-- <p>
-                  <a href="#" class="btn btn-white px-3 py-2 mt-2"
-                    >Donate Now</a
-                  >
-                </p> -->
-              </div>
-            </div>
-          </div>
-          <div
-            class="col-md d-flex justify-content-center counter-wrap ftco-animate"
-          >
-            <div class="block-18 color-3 align-items-stretch">
-              <div class="text text-center">
-                <h3 class="mb-4">EMERGING LEADERS FELLOWSHIP</h3>
-                <p>
-                  The AAF's Emerging Leaders Fellowship is a non-partisan
-                  program training young Nigerians (21–35) in transparency,
-                  efficiency, and accountability to prepare them for future
-                  leadership roles.
-                </p>
-                <!-- <p>
-                  <a href="#" class="btn btn-white px-3 py-2 mt-2"
-                    >Be A Volunteer</a
-                  >
-                </p> -->
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="ftco-section">
-      <div class="container-fluid">
-        <div class="row justify-content-center mb-5 pb-3">
-          <div class="col-md-9 heading-section ftco-animate text-center">
-            <h2 class="mb-4">Why the Foundation</h2>
-            <p>
-              Nigeria is made up of a diverse but relatively young population.
-              It is estimated that 60 per cent of Nigeria's population is under
-              the age of 25, making it one of the youngest countries in Africa.
-              While this should ordinarily be an advantage, however, the youth
-              population in Nigeria is faced with many challenges. For example,
-              as of 2020, around 68 per cent of the young people in Nigeria had
-              secondary education as their highest educational level. This also
-              has implications for the youth unemployment rate, which has been
-              increasing steadily since 2015, and as of 2021, stood at 19.6%
-              (ILO, 2023). An earlier report by the National Bureau of
-              Statistics (NBS) indicated that about 53% of 151 million Nigerian
-              youths, numbering over 80 million, are unemployed, making Nigeria
-              the second-highest number of unemployed youths in the world
-              (Foundation for Investigative Journalism, 2023). Several factors
-              ranging from a large population, lack of jobs, and deficient
-              school curricula, among others, have been given for the high
-              unemployment figures (Akande, 2014). The consequences of rising
-              crime in the country cannot be overemphasized (Ayinla and
-              Ogunmeru, 2018), with 70% of Nigeria's Youth said to be involved
-              in crime as a result of poverty and lack of economic
-              opportunities. According to Dambazau (2007) and Adebayo ( 2013),
-              the nature of these crimes includes armed robbery, murder, rape,
-              car theft, burglary, fraud, bribery and corruption, food and drug
-              adulteration, gambling, smuggling, human trafficking, kidnapping,
-              drug trafficking, money laundering, internet scam, advanced fee
-              fraud and other illegal.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="ftco-section" style="padding: 0 0 2em 0">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4 d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 d-flex services p-3 py-4 d-block">
-              <div class="icon d-flex mb-3">
-                <span class="flaticon-donation-1"></span>
-              </div>
-              <div class="media-body pl-4">
-                <h3 class="heading">Online Application</h3>
-                <p>
-                  Applicants will submit their CVs, two essays detailing their
-                  leadership experiences and future goals, and one letter of
-                  recommendation.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 d-flex services p-3 py-4 d-block">
-              <div class="icon d-flex mb-3">
-                <span class="flaticon-charity"></span>
-              </div>
-              <div class="media-body pl-4">
-                <h3 class="heading">Virtual Interview</h3>
-                <p>
-                  Applicants will submit their CVs, two essays detailing their
-                  leadership experiences and future goals, and one letter of
-                  recommendation.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 d-flex services p-3 py-4 d-block">
-              <div class="icon d-flex mb-3">
-                <span class="flaticon-donation"></span>
-              </div>
-              <div class="media-body pl-4">
-                <h3 class="heading">Final Selection</h3>
-                <p>
-                  Applicants will submit their CVs, two essays detailing their
-                  leadership experiences and future goals, and one letter of
-                  recommendation.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="ftco-section bg-light">
-      <div class="container-fluid">
-        <div class="row justify-content-center mb-5 pb-3">
-          <div class="col-md-6 heading-section ftco-animate text-center">
-            <h2 style="color: #fd7e14; font-weight: 900" class="mb-4">
-              “If you walk alone, you don’t go far. If you walk with others, you
-              travel further.”
-            </h2>
-            <h2>– Aigboje and Ofovwe Aig-Imoukhuede</h2>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <section class="ftco-section bg-light">
       <div class="container-fluid">
